# gaming-community-analytics-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  lefthook.yml  package-lock.json  package.json
.claude/: settings.json
backend/: .dockerignore  Dockerfile  Dockerfile.nlp  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_feedback_table.py  003_add_explanation_fields.py  004_add_new_platform_enums.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: dashboard.py  feedback.py  health.py  ingestion.py  nlp.py
backend/app/dashboard/: __init__.py  explanation_generator.py  patch_service.py  service.py
backend/app/ingestion/: __init__.py  scheduler.py  service.py
backend/app/ingestion/adapters/: __init__.py  base.py  google_trends.py  guidesite.py  newssource_a.py  newssource_b.py  official_news.py  reddit.py  tiersite.py  youtube.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  aggregation.py  feedback.py  post.py  sentiment.py
backend/app/nlp/: __init__.py  circuit_breaker.py  client.py  dead_letter.py  health.py  jobs.py  models.py  sentiment.py  service.py  topics.py  toxicity.py  valkey_store.py  worker.py
backend/app/schemas/: __init__.py  feedback.py  health.py
backend/app/services/: digest.py  topic_naming.py
backend/scripts/: seed_demo_data.py
backend/tests/: __init__.py  conftest.py  test_aggregation_service.py  test_api_routes.py  test_dashboard_service.py  test_feedback_api.py  test_feedback_rate_limit.py  test_nlp_pipeline_e2e.py  test_nlp_service.py  test_services.py  test_tiersite_adapter.py  test_topics.py
backend/tests/mocks/: __init__.py  valkey_mock.py
database/: README.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+97 files in other folders)
