[project]
name = "communitypulse-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",  # Sync driver for Alembic migrations
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "secweb>=1.0.0",
    "httpx>=0.28.0",
    "asyncpraw>=7.8.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
