[project]
name = "communitypulse-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",  # Sync driver for Alembic migrations
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "secweb>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.11.0",
    "google-api-python-client>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=5.0.0",
    "pyrate-limiter>=3.0.0",
    "fake-useragent>=1.5.0",
    # Google Trends
    "pytrends>=4.9.0",
    # NLP Pipeline
    "transformers>=4.48.0",
    "torch>=2.5.0",
    # Topic Detection (BERTopic)
    "sentence-transformers>=3.4.0",
    "bertopic>=0.16.0",
    "hdbscan>=0.8.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
